--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Rejoignez Drunirs, un serveur Minecraft 1.18.2 Moddée. Profitez d’un serveur fluide et innovant avec des mises à jour régulières !">
+  <meta name="description" content="Enjoy a Minecraft Server with a Magical Mod based on Lord of the Rings!">
   <meta name="theme-color" content="#E89C1B">
   <meta name="author" content="Tristan">
   <!-- Google Tag Manager -->
@@ -15,29 +15,29 @@
     <!-- End Google Tag Manager -->
   <!-- OG & Twitter -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://landofdrunirs.fr">
+  <meta property="og:url" content="https://drunir-website.herokuapp.com/">
   <meta property="og:title" content="Drunirs - Accueil">
-  <meta property="og:site_name" content="Serveur Minecraft 1.18.2 Moddée">
-  <meta property="og:description" content="Rejoignez Drunirs, un serveur Minecraft 1.18.2 Moddée. Profitez d’un serveur fluide et innovant avec des mises à jour régulières !">
-  <meta property="og:image" content="https://hyping.fr/assets/img/favicon.ico" />
+  <meta property="og:site_name" content="Minecraft Server 1.19.2 Modded">
+  <meta property="og:description" content="Enjoy a Minecraft Server with a Magical Mod based on Lord of the Rings!">
+  <meta property="og:image" content="{{ url_for('static', filename='img/header.webp') }}" />
   <meta property="og:image:alt" content="Favicon de Drunirs." />
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@Drunirs">
-  <meta name="twitter:title" content="Drunirs | Serveur Minecraft 1.18.2 Moddée">
-  <meta name="twitter:description" content="Rejoignez Drunirs, un serveur Minecraft 1.18.2 Moddée. Profitez d’un serveur fluide et innovant avec des mises à jour régulières !">
-  <meta name="twitter:image" content="https://hyping.fr/storage/img/hyping.png">
+  <meta name="twitter:title" content="Drunirs | Minecraft Server 1.19.2 Modded">
+  <meta name="twitter:description" content="Enjoy a Minecraft Server with a Magical Mod based on Lord of the Rings!">
+  <meta name="twitter:image" content="{{ url_for('static', filename='img/header.webp') }}">
   <meta name="twitter:creator" content="@Drunirs">
   <meta name="twitter:creator:id" content="@Drunirs">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="https://hyping.fr/assets/img/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/header.webp') }}">
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/header.webp') }}" sizes="32x32">
   <link rel="shortcut icon" href="{{ url_for('static', filename='img/header.webp') }}">
-  <meta name="msapplication-TileImage" content="https://hyping.fr/assets/img/favicon.ico">
+  <meta name="msapplication-TileImage" content="{{ url_for('static', filename='img/header.webp') }}">
   <meta name="msapplication-TileColor" content="#E89C1B">
 
-      <meta name="keywords" content="hyping, skyblock, oneblock, serveur minecraft, minecraft, serveur 1.18">
-  <link rel="canonical" href="https://hyping.fr">
+      <meta name="keywords" content="drunirs, server, server minecraft, 1.19.2">
+  <link rel="canonical" href="https://drunir-website.herokuapp.com/">
   <meta name="csrf-token" content="OBMXPFpS0ts4XgNilgODgVzDBNunnUTSQ9orfvx2">
 
   <title>Home - Drunirs</title>
@@ -58,7 +58,7 @@
       "@context": "http://schema.org",
       "@type": "Organization",
       "name": "Drunirs",
-      "url": "https://landofdrunirs.fr",
+      "url": "https://drunir-website.herokuapp.com/",
       "address": "play.drunirs.ca",
       "sameAs": [
       "https://discord.hyping.fr",
